examples/example-workload/ingressroute/07-externalname/root.ingressroute.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata: 
  name: external-name
spec:
  virtualhost:
    fqdn: bar.com
  routes: 
    - match: /
      services: 
        - name: externaldns
          port: 80
